Rearrange rows and prevent long text overflowing the layout
https://developer.mozilla.org/en-US/docs/Web/CSS/overflow-wrap

--- a/static/assets/css/base.css
+++ b/static/assets/css/base.css
@@ -10856,6 +10856,7 @@ span.moj-header__link:hover {
   background-color: #f3f2f1;
   padding: 15px 20px;
   margin-bottom: 30px;
+  overflow-wrap: break-word;
 }
 
 /*# sourceMappingURL=base.css.map */
